# pybind11_example

./: .gitmodules  CMakeLists.txt  README.md  pybind11_eigen.cpp  pybind11_template.cpp  pyproject.toml  setup.py  test_pybind11.py
examples/: CMakeLists.txt  rgb2gray.cpp
include/: Student.h  my_eigen.h
include/mypackage/: rgb2gray.hpp
pybind/: pybind11_eigen.cpp
src/: CMakeLists.txt  Student.cpp  Student.hpp  mainapp.cpp  my_eigen.cpp
src/backup/: Student.hpp
src/mypackage/: CMakeLists.txt  Student.cpp  rgb2gray.cpp
src/mypackage/image/: CMakeLists.txt  image.cpp  image.hpp  image_xtensor.cpp  image_xtensor.hpp  test_xtensor.cpp
tests/: CMakeLists.txt  hello_test.cpp
tests/backup/: hello_test.cpp
tests/mypackage/: CMakeLists.txt
tests/mypackage/image/: CMakeLists.txt  test_image.cpp  test_image_xtensor.cpp
